<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b1f1ea">



    <TextView
        android:id="@+id/score_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_corner"
        android:textSize="30sp"
        android:layout_margin="3dp"
        android:textAlignment="center"
        android:clickable="true"
        android:text="@string/changeMe" />

    <TextView
        android:id="@+id/maxScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="139dp"
        android:text="@string/changeMeNumber"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="141dp"
        android:layout_marginLeft="141dp"
        android:layout_marginTop="119dp"
        android:text="@string/changeMeNumber"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/score_slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/slash"
        android:textSize="50sp" />

    <ListView
        android:id="@+id/answerListView"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:layout_below="@id/scoreImage"

        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/scoreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreImage"
        android:textSize="20sp"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#87efe3"
        android:text="@string/changeMe" />

    <ImageView
        android:id="@+id/scoreImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/maxScore"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-69dp"
        android:layout_below="@id/score_title"
        android:clickable="true"
        app:srcCompat="@drawable/venus_opa" />




</RelativeLayout>